# SiberienButterfly

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Design Ideas.md  Designdoc.md  TODO  TODO.md  config.yaml  out.yaml  random.txt  settings.yaml
assets/: TODO  childObj.asset  editorSettings.asset  grid.asset  parentObj.asset  settings.asset
assets/SphericalHarmonics/: env.asset
assets/engine/: editorCamera.asset  nightHarmonics.asset  prefabExample.asset
assets/engine/materials/: SimpleBlit.asset  mirror.asset  shadowCaster.asset  standard.asset
assets/engine/modelPreview/: camera.asset  floor.asset  light.asset  scene.asset
assets/engine/models/: 1x1Plane.glb  Cube.glb  Icosphere.glb
assets/engine/shaders/: main.asset  main_transparent.asset  shadowCaster.asset  simpleBlit.asset
assets/engine/shaders/bump/: fs_bump.fs  transparent.fs  varying.def.sc
assets/engine/shaders/deferredDirLight/: common.sh  fs.fs  fs_shadowmaps_color_lighting.sh  fs_shadowmaps_color_lighting_main.sh  varying.def.sc  vs.vs
assets/engine/shaders/shadowCaster/: fs_bump.fs  varying.def.sc  vs_bump.vs
assets/engine/shaders/simpleBlit/: fs.fs  vs.vs
assets/engine/test/: .gitignore  NavMeshAgent_MoveToMouse.asset  NavMeshAgent_WASD.asset  cylinder.glb  navmeshScene.asset  navmeshtest.glb  physicsScene.asset
assets/engine/test/pbrScene/: ballLight1.asset  ballLight2.asset  ballLight3.asset  ballLight4.asset  pbrBalls.asset  pbrBalls.glb  scene.asset
assets/materials/: grid.asset  gridInstanced.asset
assets/models/: Apple.blend  GridCells.blend  Vintik.blend  b.blend  column.blend  sheep.blend
assets/prefabs/: CampfireWithWoodFired.asset  StoveWithWoodFired.asset  apple.asset  camera.asset  carriedItem.asset  character.asset  column.asset  game.asset  grid.asset  gridCell.asset  gridChunkCollider.asset  groundPlane.asset  player.asset  selection.asset  selectionArrow.asset  torch.asset  torch2.asset
assets/scenes/: first_test.asset
assets/scripts/: Actions.lua  Apple.lua  BehaviourTree.lua  BehaviourTree_Builder.lua  BehaviourTree_Node.lua  BehaviourTree_NodeFunctions.lua  BehaviourTree_NodesFactory.lua  CampfireLightComponent.lua  CellAnimType.lua  CellAnimTypeInv.lua  CellAnimations.lua  CellType.lua  CellTypeDesc.lua  CellTypeInv.lua  CellTypeUtils.lua  Character.lua  CharacterCommandFactory.lua  CharacterController.lua  CharacterControllerBase.lua  CharacterControllerBehaviourTree.lua  ComponentTemplate.lua  DayTime.lua  EnumUtils.lua  Game.lua  GameConsts.lua  GameDbg.lua  GameHandler.lua  Grid.lua  PlayerController.lua  RandomNamesGenerator.lua  SheepCharacterController.lua  Utils.lua  World.lua  WorldQuery.lua  main.lua  test.lua
assets/shaders/: mainInstanced.asset  utils.sh
assets/shaders/bullets/: fs_bullets.fs  varying.def.sc  vs_bullets.vs
assets/shaders/bump/: fs_bump.fs  fs_cutoff.fs  vs_bump.vs
source/: CMakeLists.txt
source/Butterfly/: BigPickableItem.cpp  BigPickableItem.h  Butterfly.sln  Butterfly.vcxproj  Butterfly.vcxproj.filters  ButterflyGame.cpp  ButterflyGame.h  CMakeLists.txt  Grid.cpp  Grid.h  Main.cpp  Main.h  PlayerController.cpp  PlayerController.h  SpawnOnEnableComponent.cpp  SpawnOnEnableComponent.h  TopDownCameraRig.cpp
source/Butterfly/Debug/: Butterfly.exe.recipe
source/Butterfly/Debug/Butterfly.tlog/: Butterfly.lastbuildstate
