cmake_minimum_required(VERSION 3.1)

set(CMAKE_CONFIGURATION_TYPES "Debug;Release;DebugWithReleaseLibs")

set(CMAKE_MESSAGE_LOG_LEVEL "NOTICE")

set(CMAKE_BUILD_TYPE "DebugWithReleaseLibs")

set(CMAKE_DEBUGWITHRELEASELIBS_POSTFIX "")
set(CMAKE_DEBUG_POSTFIX "")
set(CMAKE_RELESE_POSTFIX "")

add_compile_definitions($<$<CONFIG:DebugWithReleaseLibs>:_ITERATOR_DEBUG_LEVEL=1>)
set(CMAKE_SHARED_LINKER_FLAGS_DEBUGWITHRELEASELIBS ${CMAKE_SHARED_LINKER_FLAGS_DEBUG})
set(CMAKE_EXE_LINKER_FLAGS_DEBUGWITHRELEASELIBS ${CMAKE_EXE_LINKER_FLAGS_DEBUG})
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DSE_DEBUG")
set(CMAKE_CXX_FLAGS_DEBUGWITHRELEASELIBS "${CMAKE_CXX_FLAGS_DEBUG} /MT")

message("***Generated with config types: ${CMAKE_CONFIGURATION_TYPES}***")

set(CMAKE_BUILD_TYPE "DebugWithReleaseLibs")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)


add_definitions(-DUNICODE)
if (MSVC)
    add_definitions("/MP")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /ZI")
	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SAFESEH:NO")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
endif()

add_subdirectory(engine)
set(CMAKE_CXX_FLAGS_DEBUGWITHRELEASELIBS "${CMAKE_CXX_FLAGS_DEBUG} /MD")
add_subdirectory(source/Butterfly)