cmake_minimum_required(VERSION 3.1)

project(SiberienButterfly)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")

set_property(GLOBAL PROPERTY POSITION_INDEPENDENT_CODE ON)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
if(ASSERTIONS STREQUAL "disabled")
  message("-------------------${SDL_DEFAULT_ASSERT_LEVEL}")
endif()
#TODO lto
set(CMAKE_CONFIGURATION_TYPES "DebugAsan;Debug;Release;RelWithDebInfo")

set(CMAKE_MESSAGE_LOG_LEVEL "NOTICE")

# set(CMAKE_BUILD_TYPE "DebugWithReleaseLibs")

set(CMAKE_DEBUGASAN_POSTFIX "")
# set(CMAKE_DEBUGWITHRELEASELIBS_POSTFIX "")
set(CMAKE_DEBUG_POSTFIX "")
set(CMAKE_RELESE_POSTFIX "")
set(CMAKE_RELWITHDEBINFO_POSTFIX "")
# set(CMAKE_RETAIL_POSTFIX "")

# add_compile_definitions($<$<CONFIG:DebugWithReleaseLibs>:_ITERATOR_DEBUG_LEVEL=1>)

add_definitions(-DNOMINMAX)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DSE_DEBUG")

# set(CMAKE_SHARED_LINKER_FLAGS_DEBUGWITHRELEASELIBS ${CMAKE_SHARED_LINKER_FLAGS_DEBUG})
# set(CMAKE_EXE_LINKER_FLAGS_DEBUGWITHRELEASELIBS ${CMAKE_EXE_LINKER_FLAGS_DEBUG})
# set(CMAKE_CXX_FLAGS_DEBUGWITHRELEASELIBS "${CMAKE_CXX_FLAGS_DEBUG}")

set(CMAKE_SHARED_LINKER_FLAGS_DEBUGASAN "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} -fsanitize=address")
set(CMAKE_EXE_LINKER_FLAGS_DEBUGASAN "${CMAKE_EXE_LINKER_FLAGS_DEBUG} -fsanitize=address")
set(CMAKE_CXX_FLAGS_DEBUGASAN "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=address -fPIC")
set(CMAKE_C_FLAGS_DEBUGASAN "${CMAKE_C_FLAGS_DEBUGASAN} -fPIC")

# set(CMAKE_SHARED_LINKER_FLAGS_RETAIL ${CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO})
# set(CMAKE_EXE_LINKER_FLAGS_RETAIL ${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO})
# set(CMAKE_CXX_FLAGS_RETAIL "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -DSE_RETAIL")

message("***Generated with config types: ${CMAKE_CONFIGURATION_TYPES}***")
message("${CMAKE_BUILD_TYPE}")
if (CMAKE_BUILD_TYPE MATCHES "Debug")
    message("IT IS DEBUG")
endif()
if (CMAKE_BUILD_TYPE MATCHES "Release")
    message("IT IS RELEASE")
endif()
# set(CMAKE_BUILD_TYPE "Release")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)


set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-rpath='$ORIGIN/../lib'")

if (MSVC)
    add_definitions(-DUNICODE)
    add_definitions("/MP")
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /ZI")
	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SAFESEH:NO")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SAFESEH:NO")
endif()

add_subdirectory(engine)
# set(CMAKE_CXX_FLAGS_DEBUGWITHRELEASELIBS "${CMAKE_CXX_FLAGS_DEBUG} /MD")

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")

add_subdirectory(source/Butterfly)
